--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -76,7 +76,7 @@
     @apply inline-block mr-3;
   }
   .find-heading-img1 {
-    @apply 2xl:w-56 xl:w-40 lg:w-40 md:w-24 w-16  md:mt-[-5px] mt-[-10px] flex;
+    @apply 2xl:w-56 xl:w-40 lg:w-40 md:w-24 w-16  md:mt-[-5px]  flex;
   }
   .find-heading-span2 {
     @apply inline-block lg:mt-[-20px] leading-[35px] lg:leading-[50px] xl:leading-[60px]  2xl:leading-[80px];
@@ -136,39 +136,39 @@
   height: 90%;
 }
 
-.whiteCard{
-  display: flex; 
-  padding: 2rem; 
-  flex-direction: row; 
-  border-radius: 0.5rem; 
-  width: auto; 
-  min-width: 100%; 
-  background-image: linear-gradient(to top right, #fff, #b1b1b1); 
-  box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25); 
+.whiteCard {
+  display: flex;
+  padding: 2rem;
+  flex-direction: row;
+  border-radius: 0.5rem;
+  width: auto;
+  min-width: 100%;
+  background-image: linear-gradient(to top right, #fff, #b1b1b1);
+  box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
   height: 90%;
 }
 
-.limeCard{
-  display: flex; 
-  padding: 2rem; 
-  flex-direction: row; 
-  border-radius: 0.5rem; 
-  width: auto; 
-  min-width: 100%; 
-  background-image: linear-gradient(to top right, #67E8F6, #A0E640); 
-  box-shadow: 0 25px 50px -12px #67E8F6; 
+.limeCard {
+  display: flex;
+  padding: 2rem;
+  flex-direction: row;
+  border-radius: 0.5rem;
+  width: auto;
+  min-width: 100%;
+  background-image: linear-gradient(to top right, #67e8f6, #a0e640);
+  box-shadow: 0 25px 50px -12px #67e8f6;
   height: 90%;
 }
 
-.blueCard{
-  display: flex; 
-  padding: 2rem; 
-  flex-direction: row; 
-  border-radius: 0.5rem; 
-  width: auto; 
-  min-width: 100%; 
-  background-image: linear-gradient(to top right, #084a8c, #72458f); 
-  box-shadow: 0 25px 50px -12px #084a8c; 
+.blueCard {
+  display: flex;
+  padding: 2rem;
+  flex-direction: row;
+  border-radius: 0.5rem;
+  width: auto;
+  min-width: 100%;
+  background-image: linear-gradient(to top right, #084a8c, #72458f);
+  box-shadow: 0 25px 50px -12px #084a8c;
   height: 90%;
 }
 
@@ -177,5 +177,5 @@
   font-size: 4.5rem /* 72px */;
   line-height: 1;
   overflow-wrap: break-word;
-  box-shadow: 0 25px 50px -12px #72458f; 
+  box-shadow: 0 25px 50px -12px #72458f;
 }
