--- a/Admin/src/index.css
+++ b/Admin/src/index.css
@@ -1,10 +1,91 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-ul {
-    list-style-type: disc; /* ul's default style type */
+
+.mantine-editor-content h1 {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
 }
+
+.mantine-editor-content h2 {
+  font-size: 1.75rem;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+}
+
+/* General list styles */
+.mantine-editor-content ol {
+  padding-left: 1.5rem;
+  /* list-style-type:decimal; */
+}
+
+.mantine-editor-content ul {
+  padding-left: 1.5rem;
+  /* list-style-type: disc; */
+}
+
+.mantine-editor-content ul[data-style="checked"] {
+  list-style-type: none !important;
+  padding-left: 1.5rem;
+}
+
+.mantine-editor-content ul[data-style="checked"] > li {
+  display: flex; 
+  align-items: center; 
+}
+
+.mantine-editor-content ul[data-style="checked"] > li::before {
+  content: "✔";
+  margin-right: 8px;
+  color: green;
+  font-weight: bold;
+  display: inline-block;
+  width: 1em; 
+  text-align: center; 
+}
+
+.mantine-editor-content ul[data-style="dashed"] {
+  list-style-type: none !important;
+  padding-left: 1.5rem;
+}
+
+.mantine-editor-content ul[data-style="dashed"] > li {
+  display: flex; 
+  align-items: center; 
+}
+
+.mantine-editor-content ul[data-style="dashed"] > li::before {
+  content: "-";
+  margin-right: 5px;
+  font-weight: bold;
+  display: inline-block; 
+  width: 1em; 
+  text-align: center; 
+}
+
+.mantine-editor-content ul[data-style="arrow"] {
+  list-style-type: none !important;
+  padding-left: 1.5rem;
+}
+
+.mantine-editor-content ul[data-style="arrow"] > li {
+  display: flex; 
+  align-items: center; 
+}
+
+.mantine-editor-content ul[data-style="arrow"] > li::before {
+  content: "→"; 
+  margin-right: 8px;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  display: inline-block; 
+  width: 1em;
+  text-align: center; 
+}
+
+
